<resources>
    <string name="app_name">Mob Cleaner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="notification_listener_service_label" translatable="false">Notification Listener Service</string>
    <string name="app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="unit_id" translatable="false">ca-app-pub-3940256099942544/9214589741</string>


    <string-array name="dropdown_items1">
        <item>All Types</item>
        <item>Images</item>
        <item>Video</item>
        <item>Audio</item>
        <item>Document</item>
        <item>Archives</item>
        <item>Apk</item>
    </string-array>

        <string name="navigation_drawer_open">Open navigation drawer</string>
        <string name="navigation_drawer_close">Close navigation drawer</string>

        <string name="welcome">Engine is ready</string>
        <string name="action_settings">Settings</string>
        <string name="splash_desc">Preparing data ...</string>
        <string name="choose_region">Select a server region</string>
        <string name="region_china">China</string>
        <string name="region_intl">International</string>
        <string name="scan">SCAN</string>
        <string name="scanning">Scanning in progress ...</string>
        <string name="scan_overview">Scan Overview</string>
        <string name="details">Details</string>
        <string name="scan_total">Total Scanned</string>
        <string name="scan_invalid">Invalid APKs</string>
        <string name="scan_malware">Malware</string>
        <string name="scan_pua">PUA</string>

        <string name="scan_benign">Benign</string>
        <string name="scan_time">Scan Time</string>
        <string name="score_label">Score:</string>
        <string name="virus_label">Family Name:</string>
        <string name="md5_label">MD5:</string>
        <string name="scan_results_title">Scan Results</string>
        <string name="cloud_scan">Cloud Scan</string>

        <string name="choose_scan_mode">Select a scan mode</string>
        <string name="quick_scan">Quick Scan</string>
        <string name="folder_scan">Folder Scan</string>
        <string name="comprehensive_scan">Comprehensive Scan</string>
        <string name="quick_scan_desc">Scan all installed apps.</string>
        <string name="folder_scan_desc">Scan all files ending in \'.apk\' in Download folder (%1$s). Total %2$d files.</string>
        <string name="comprehensive_scan_desc">For this demo, scan all installed APKs and files ending in \'.apk\' in SDCard folder (%1$s).</string>
        <string name="back">Back</string>

        <string name="need_permission"> Please grant READ_EXTERNAL_STORAGE permission</string>
        <string name="summary">Summary:</string>
        <string name="category">Category:</string>

        <string name="static_or_dynamic">Detected by static engine or cloud? </string>
        <string name="static_engine">Static engine</string>
        <string name="cloud">Cloud</string>



</resources>