<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black">

    <LinearLayout
        android:id="@+id/ll_overview"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:background="@drawable/border_drawable"
        android:layout_margin="16dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="10dp"
            android:textColor="@color/blue"
            android:textSize="@dimen/font_size_18"
            android:fontFamily="@font/lato_bold"
            android:text="@string/scan_overview"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin">
            <TextView
                android:id="@+id/tv_scan_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/lato_bold"
                android:textSize="@dimen/font_size_16"
                android:text="@string/scan_total"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tv_scan_total_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textColor="@color/text_grey"
                android:fontFamily="@font/lato_bold"
                android:textSize="@dimen/font_size_16"
                android:text="0"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin">
            <TextView
                android:id="@+id/tv_scan_invalid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/lato_bold"
                android:textSize="@dimen/font_size_16"
                android:text="@string/scan_invalid"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tv_scan_invalid_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textColor="@color/text_grey"
                android:fontFamily="@font/lato_bold"
                android:textSize="@dimen/font_size_16"
                android:text="0"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin">
            <TextView
                android:id="@+id/tv_scan_malware"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/lato_bold"
                android:textSize="@dimen/font_size_16"
                android:text="@string/scan_malware"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tv_scan_malware_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textColor="@color/text_grey"
                android:fontFamily="@font/lato_bold"
                android:textSize="@dimen/font_size_16"
                android:text="0"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin">
            <TextView
                android:id="@+id/tv_scan_pua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/lato_bold"
                android:textSize="@dimen/font_size_16"
                android:text="@string/scan_pua"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tv_scan_pua_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textColor="@color/text_grey"
                android:fontFamily="@font/lato_bold"
                android:textSize="@dimen/font_size_16"
                android:text="0"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin">
            <TextView
                android:id="@+id/tv_scan_benign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/lato_bold"
                android:textSize="@dimen/font_size_16"
                android:text="@string/scan_benign"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tv_scan_benign_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textColor="@color/text_grey"
                android:fontFamily="@font/lato_bold"
                android:textSize="@dimen/font_size_16"
                android:text="0"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin">
            <TextView
                android:id="@+id/tv_scan_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/lato_bold"
                android:textSize="@dimen/font_size_16"
                android:text="@string/scan_time"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tv_scan_time_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textColor="@color/text_grey"
                android:fontFamily="@font/lato_bold"
                android:textSize="@dimen/font_size_16"
                android:text="0"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/tv_line"
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:layout_below="@+id/ll_overview"
            android:background="#0000"
            android:layout_marginTop="8dp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_overview"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:textColor="@color/blue"
        android:fontFamily="@font/lato_bold"
        android:textSize="@dimen/font_size_18"
        android:text="@string/details"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        />

</LinearLayout>